--- a/public/index.html
+++ b/public/index.html
@@ -39,16 +39,16 @@
           <div class="container-fluid clearfix">
             <div class="brand">
               <a href="home-flash.html">
-                <div class="brand-name">LW</div>
-                <div class="brand-text">Crafting Digital<br /> Studio</div>
+                <a href="index.html"> <img src="img/logo2.png" alt="Italian Trulli" width="100 "></a>
+                <div class="brand-text">Design <br /> Your Dreams</div>
               </a>
             </div>
 
             <div class="header-content d-none d-md-block">
               <div class="header-contacts">
-                <div class="header-contact-item"><a href="tel:+00853462188" class="phone-link">+0085 346 2188</a></div>
+                <div class="header-contact-item"><a href="tel:+65 96492310" class="phone-link">+65 96492310</a></div>
                 <div class="header-contact-divider">/</div>
-                <div class="header-contact-item"><a href="mailto:contact@lewisstudio.com" class="mail-link">contact@lewisstudio.com</a></div>
+                <div class="header-contact-item"><a href="mailto:contact@grivty.com" class="mail-link">contact@grivty.com</a></div>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
         </ul>
 
         <div class="establised">establised 1991</div>
-        <div class="copyright-fixed">&copy; lewis 2019.&nbsp; by logancee</div>
+        <div class="copyright-fixed">&copy; Grivty 2020.&nbsp; Singapore</div>
 
         <div class="home-piling a-pagepiling full-height">
           <div id="home" class="section pp-scrollable slide slide1 slide-dark">
@@ -96,13 +96,14 @@
                     <div class="solution-num-title">Years<br /> Experience</div>
                   </div>
                   <div class="col-lg-6">
-                    <h2 class="slide-title font-libre">Best solution<br /> for business &amp;<br /> start-up </h2>
+                    <h2 class="slide-title font-libre">Capturing 
+                      <br /> Perfect designs <br />  With our services </h2>
 
                     <div class="accordion solution-collapse" id="solutions">
                       <div class="solution-collapse-item">
                         <div class="solution-collapse-item-title font-libre" id="headingOne">
                           <a class="" href="" data-toggle="collapse" data-target="#solution1" aria-expanded="true" aria-controls="solution1">
-                            Graphic & Branding
+                            Design & Printing
                             <i class="icon-plus"></i>
                           </a>
                         </div>
@@ -116,7 +117,8 @@
                       <div class="solution-collapse-item">
                         <div class="solution-collapse-item-title font-libre" id="headingTwo">
                           <a class=" collapsed" href="" data-toggle="collapse" data-target="#solution2" aria-expanded="false" aria-controls="solution2">
-                            UI/UX Interaction
+                            Data Analytics
+
                             <i class="icon-plus"></i>
                           </a>
                         </div>
@@ -129,7 +131,7 @@
                       <div class="solution-collapse-item">
                         <div class="solution-collapse-item-title font-libre" id="headingThree">
                           <a class=" collapsed" href="" data-toggle="collapse" data-target="#solution3" aria-expanded="false" aria-controls="solution3">
-                            Motion Video
+                            Digital Marketing
                             <i class="icon-plus"></i>
                           </a>
                         </div>
@@ -180,7 +182,7 @@
                   </div>
                   <div class="col-xl-4 col-6">
                     <div class="piling-more-total">
-                      <a href="work-grid.html">more<br /> projects</a>
+                      <a href="ourworks.html">more<br /> projects</a>
                     </div>
                   </div>
                 </div>
@@ -267,11 +269,11 @@
               <div class="container">
                 <div class="row slide-content">
                   <div class="col-sm-6">
-                    <h2 class="slide-title font-libre h2"><span class="text-primary">New York,</span> USA</h2>
+                    <h2 class="slide-title font-libre h2"><span class="text-primary">Grivty, </span>Singapore</h2>
                     <div class="slide-body">
-                      <div class="slide-contact-address">166 Main Street, Beverly Hills, CA 90210</div>
-                      <div class="slide-contact-mail"><a href="mailto:hello@lewisstudio.co" class="underline">hello@lewisstudio.co</a></div>
-                      <div class="slide-contact-phone"><a href="tel:+00853462188" class="phone-link">+0085 346 2188</a></div>
+                      <div class="slide-contact-address">North Spring Biz Hub, No. 9 ,#01-67, <br>Yishun Industrial Street 1,<br>Singapore 768163</div>
+                      <div class="slide-contact-mail"><a href="mailto:contact@grivty.com" class="underline">contact@grivty.com</a></div>
+                      <div class="slide-contact-phone"><a href="tel:+65 96492310" class="phone-link">+65 96492310</a></div>
                     </div>
                   </div>
                 </div>
