--- a/public/single-project-web-design.html
+++ b/public/single-project-web-design.html
@@ -311,7 +311,7 @@
         <div class="footer-flash-about home-flash-dark">
           <div class="container">
             Tell us more about what you want to accomplish with your organisation. We help you think of possible solutions in an ever-changing digital world.
-            <div class="mt-4"><a href="mailto:hello@lewisstudio.co" class="underline"><strong>hello@lewisstudio.co</strong></a></div>
+            <div class="mt-4"><a href="mailto:contact@grivty.com" class="underline"><strong>contact@grivty.com</strong></a></div>
           </div>
         </div>
 
@@ -324,8 +324,8 @@
                 <div class="col-md-4 col-6 mb-5">
                   <h5>Office</h5>
                   <div class="contact-item">166 Main Street, Beverly Hills,<br /> CA,&nbsp;90210</div>
-                  <div class="contact-item"><a href="mailto:hello@lewisstudio.co">hello@lewisstudio.co</a></div>
-                  <div class="contact-item"><a href="tel:+00853462188" class="phone-link">+0085 346 2188</a></div>
+                  <div class="contact-item"><a href="mailto:contact@grivty.com">contact@grivty.com</a></div>
+                  <div class="contact-item"><a href="tel:+65 96492310" class="phone-link">+65 96492310</a></div>
                 </div>
 
                 <div class="col-md-3 col-6 mb-5">
