--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,14 @@
 
                         <div id="solution1"  class="collapse show" aria-labelledby="headingOne" data-parent="#solutions">
                           <div class="card-body">
-                            Designing for an optimal digital experience. intuitive and user friendly. Our websites, platforms and apps are built for the way your users behave to ensure an experience that will make them come back for more.... <a href="service.html">See more</a>
+                            Logo & Identity<br>
+Flyers,Brochures & Letterhead<br>
+Business Cards & Id Cards<br>
+Calendar & Corporate Folder<br>
+Ticket,Voucher & Postcard<br>
+Signboard & Decals<br>
+Display Stand & Billboards<br>
+Product Packaging 
                           </div>
                         </div>
                       </div>
@@ -124,7 +131,13 @@
                         </div>
                         <div id="solution2" class="collapse" aria-labelledby="headingTwo" data-parent="#solutions">
                           <div class="card-body">
-                            Designing for an optimal digital experience. intuitive and user friendly. Our websites, platforms and apps are built for the way your users behave to ensure an experience that will make them come back for more.... <a href="service.html">See more</a>
+                            Financial Analytics<br>
+Customer Analytics<br>
+Marketing and Sales Analytics<br>
+Supply Chain Analytics<br>
+Asset Analytics<br>
+Manufacturing Analytics<br>
+HR Analytics
                           </div>
                         </div>
                       </div>
@@ -137,7 +150,13 @@
                         </div>
                         <div id="solution3" class="collapse" aria-labelledby="headingThree" data-parent="#solutions">
                           <div class="card-body">
-                            Designing for an optimal digital experience. intuitive and user friendly. Our websites, platforms and apps are built for the way your users behave to ensure an experience that will make them come back for more.... <a href="service.html">See more</a>
+                            Digital Business Strategy<br>
+                            Website Design<br>
+                            Search Engine Optimization (SEO)<br>
+                            Social Media Optimization (SMO)<br>
+                            Email Marketing<br>
+                            Content Developing<br>
+                            Pay Per Click<br>
                           </div>
                         </div>
                       </div>
@@ -198,21 +217,21 @@
 
                 <div class="slide-body">
                   <div class="row no-gutters partner-list partner-bordered">
-                    <div class="col partner-item"><span class="inside"><img src="img/pic12.png" alt="" /></span></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic13.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic14.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic15.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic16.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic17.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic18.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic20.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic21.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic22.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic23.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic24.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic25.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic26.png" alt="" /></a></div>
-                    <div class="col partner-item"><a href="#" class="inside"><img src="img/pic27.png" alt="" /></a></div>
+                    <div class="col partner-item"><span class="inside"><img src="img/clients/GARDEN DOOR-01.png" alt="" /></span></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Little Nest Logo-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/ryukaa.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Chestergate Technologies logo.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/flynew tours.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Nee logo.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Smart garden mart logo.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/river valley logo.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/MAGALLEN -01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Amal jothi-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/Vcorplogo-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/digipromoz logo-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/digipromoz logo-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/digipromoz logo-01.png" alt="" /></a></div>
+                    <div class="col partner-item"><a href="#" class="inside"><img src="img/clients/digipromoz logo-01.png" alt="" /></a></div>
                   </div>
                 </div>
               </div>
