--- a/public/index.html
+++ b/public/index.html
@@ -175,32 +175,32 @@ HR Analytics
               <div class="slide-bg-list">
                 <div class="slide-bg active"><div class="inside" style="background-image: url(img/piling-project1.jpg);"></div></div>
                 <div class="slide-bg"><div class="inside" style="background-image: url(img/piling-project2.jpg);"></div></div>
-                <div class="slide-bg"><div class="inside" style="background-image: url(img/littlenest.jpg);"></div></div>
-                <div class="slide-bg"><div class="inside" style="background-image: url(img/piling-project4.jpg);"></div></div>
+                <div class="slide-bg"><div class="inside" style="background-image: url(img/vcorpl.jpg);"></div></div>
+                <div class="slide-bg"><div class="inside" style="background-image: url(img/curlybrace.jpg);"></div></div>
                 <div class="slide-bg"><div class="inside" style="background-image: url(img/piling-project5.jpg);"></div></div>
               </div>
               <div class="container">
                 <div class="piling-project-list-title">Latest projects</div>
                 <div class="row piling-project-list">
                   <div class="col-xl-4 col-6 piling-project-item">
-                    <h3 class="piling-project-title font-libre"><a href="single-project-mobile-app.html" class="a-change-bg">Boranito<br /> Skate</a></h3>
-                    <div class="piling-project-detail">2018 / Interaction</div>
+                    <h3 class="piling-project-title font-libre"><a href="littlenest.html" class="a-change-bg">Little<br /> Nest</a></h3>
+                    <div class="piling-project-detail"> Product Design</div>
                   </div>
                   <div class="col-xl-4 col-6 piling-project-item">
-                    <h3 class="piling-project-title font-libre"><a href="single-project-branding.html" class="a-change-bg">Rick<br />  Meyers</a></h3>
-                    <div class="piling-project-detail">2018 / Branding</div>
+                    <h3 class="piling-project-title font-libre"><a href="sgmart.html" class="a-change-bg"> SG<br />  Mart</a></h3>
+                    <div class="piling-project-detail">Voucher </div>
                   </div>
                   <div class="col-xl-4 col-6 piling-project-item">
-                    <h3 class="piling-project-title font-libre"><a href="single-project-branding.html" class="a-change-bg">Little Nest<br /> Opener</a></h3>
-                    <div class="piling-project-detail">2018 / Branding</div>
+                    <h3 class="piling-project-title font-libre"><a href="vcorplogistics.html" class="a-change-bg">Vcorp <br /> Logistics</a></h3>
+                    <div class="piling-project-detail">Graphic Design</div>
                   </div>
                   <div class="col-xl-4 col-6 piling-project-item">
-                    <h3 class="piling-project-title font-libre"><a href="single-project-web-design.html" class="a-change-bg">Onne<br /> Portfolio</a></h3>
-                    <div class="piling-project-detail">2017 / Interaction</div>
+                    <h3 class="piling-project-title font-libre"><a href="curlybrace.html" class="a-change-bg">Curly<br /> Brace</a></h3>
+                    <div class="piling-project-detail">Web Design</div>
                   </div>
                   <div class="col-xl-4 col-6 piling-project-item">
-                    <h3 class="piling-project-title font-libre"><a href="single-project-branding.html" class="a-change-bg">Dark<br /> Bottle</a></h3>
-                    <div class="piling-project-detail">2017 / Branding</div>
+                    <h3 class="piling-project-title font-libre"><a href="groso.html" class="a-change-bg">Groso<br /> Grocery</a></h3>
+                    <div class="piling-project-detail">Graphic Design</div>
                   </div>
                   <div class="col-xl-4 col-6">
                     <div class="piling-more-total">
