--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@ HR Analytics
           <div id="projects" class="section pp-scrollable slide slide3 slide-dark">
             <div class="slide-container">
               <div class="slide-bg-list">
-                <div class="slide-bg active"><div class="inside" style="background-image: url(img/piling-project1.jpg);"></div></div>
+                <div class="slide-bg active"><div class="inside" style="background-image: url(img/littlenest.jpg);"></div></div>
                 <div class="slide-bg"><div class="inside" style="background-image: url(img/piling-project2.jpg);"></div></div>
                 <div class="slide-bg"><div class="inside" style="background-image: url(img/vcorpl.jpg);"></div></div>
                 <div class="slide-bg"><div class="inside" style="background-image: url(img/curlybrace.jpg);"></div></div>
